--- a/pages/_partials/_layout.twig
+++ b/pages/_partials/_layout.twig
@@ -8,7 +8,17 @@
     <title>Document</title>
 </head>
 <body>
+  <ul>
+    <li><a href="/">home</a></li>
+    <li><a href="/login">login</a></li>
+  </ul>
     {% block content %}
+    {% endblock %}
+    <script
+    src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+    {% block script %}
     {% endblock %}
 </body>
 </html>
